<resources>
    <string name="app_name">AndroidClient</string>
    <string name="greeting">Hello world</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="logo_image">logo_image</string>
    <string name="add_contact_button">add_contact_button</string>
    <string name="add_contact">Add contact</string>
    <string name="contact_username">Contact username</string>
    <string name="add">Add</string>
    <string name="server">Server</string>
    <string name="search">Search</string>
    <string name="BaseUrl" translatable="false">http://10.0.2.2:7018</string>
    <string name="type_msg">Type message...</string>
    <string name="change_server" translatable="false">Change server</string>
    <string name="change" translatable="false">Change</string>
    <string name="new_server" translatable="false">New server</string>
    <string name="settings_button" translatable="false">Settings button</string>

</resources>