<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_all"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/main_color"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/layout_bg_round"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.25"
        android:elevation="100dp">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/add_contact"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/add_contact_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/contact_username"
            android:autofillHints="@string/contact_username"
            android:textSize="22sp"
            android:inputType="textPersonName" />



        <EditText
            android:id="@+id/add_contact_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/display_name"
            android:autofillHints="@string/display_name"
            android:textSize="22sp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/add_contact_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/server"
            android:autofillHints="@string/server"
            android:textSize="22sp"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/add_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_main_color"
            android:text="@string/add"
            />






    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="134dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@drawable/logo_image"
        android:contentDescription="@string/logo_image"/>


</androidx.constraintlayout.widget.ConstraintLayout>